2024-02-25  Karl Berry  <karl@freefriends.org>

	* locnull-optimize.ch: inner loop optimization (removing one
	unnecessary condition) from DRF.
	* eptexdir/am/eptex.am (eptex_web_srcs),
	* euptexdir/am/euptex.am (euptex_web_srcs),
	* pdftexdir/am/pdftex.am (pdftex_ch_srcs),
	* ptexdir/am/ptex.am (ptex_web_srcs),
	* uptexdir/am/uptex.am (uptex_web_srcs),
	* xetexdir/am/xetex.am (xetex_ch_srcs): include locnull-optimize.ch.

2024-02-20  Karl Berry  <karl@tug.org>

	* doc/web2c.texi: 2024.

2024-02-11  Karl Berry  <karl@tug.org>

	* am/cweb.am (dist_bin_SCRIPTS): add cwebdir/twill-refsort.
	
	* Add keyword expansion to files that had a literal $Id$:
cwebdir/twill-refsort
eptexdir/epver.test
euptexdir/eptriptest.test
euptexdir/eupver.test
euptexdir/upkcat.test
mplibdir/mpmathbinary.w
mplibdir/mpmathdecimal.w
mplibdir/mpmathinterval.w
ptexdir/pver.test
tests/expanded-overflow.tex
twill.test
uptexdir/gk256.test
uptexdir/gkhuge.test
uptexdir/nissya.test
uptexdir/ptriptest.test
uptexdir/sample.test
uptexdir/skipjfmp.test
uptexdir/unibib.test
uptexdir/uparse.test
uptexdir/upbibtex-mem.test
uptexdir/upkcat.test
uptexdir/upver.test
web2c/Makefile.am

2024-02-01  Luigi Scarso  <luigi.scarso@gmail.com>

	* ac/web2c.ac (mp, pmp, upmp): depend on mpfi.
	* Makefile.am (MPFI_RULE): add.
	* configure.ac (KPSE_MPFI_FLAGS): add.
	* mplibdir: pervasive changes to support mpfi.
	* luatexdir/lua/mplibstuff.c: mpfi bindings.

2024-02-01  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/enc-utf8.bib, tests/enc-{,e,s}[pu].bbl:
	Add tests for guess encodings & upBibTeX &
	Kana (semi)voiced sounds.

2023-12-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/fn-generate.perl:
	Add option -randgen for parallel tests.

2023-12-23  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* Makefile.in, ac/web2c.ac (eptex):
	Do not build binaries of e-pTeX and
	we use alias of e-upTeX for e-pTeX by default.
	https://github.com/texjporg/tex-jp-build/issues/32
